--- a/armazemww/src/main/resources/templates/website.html
+++ b/armazemww/src/main/resources/templates/website.html
@@ -1,10 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 
 <head>
 	<title>Armazem WW</title>
+	
+	<!-- Materialize -->
+	<!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
+      <link rel="StyleSheet" href="style/styleCss.css" />
+	
+	
 </head>
 <body>
-	<h1>Armazem WW</h1>
+	
+	<nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo"><i class="material-icons">apps</i>Armazem de Vestuarios e Acessorios W.W.</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+        <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+        <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+        <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+      </ul>
+    </div>
+  </nav>
+  
+  <div class="imagens">
+  
+	  <img src="armabranca.jpg"
+	  	alt="Acessorios acessiveis"
+	  	vspace="35px"
+	  	hspace="15px"
+	  	border="15px"
+	  	align="left"
+	  	width="100px"
+	  />
+  </div>
+  
+  <div class="progress">
+      <div class="indeterminate"></div>
+  </div>
+  
+  <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+  
 </body>
 
 </html>
