--- a/armazemww/src/main/resources/templates/formUsuario.html
+++ b/armazemww/src/main/resources/templates/formUsuario.html
@@ -22,6 +22,11 @@
       <a href="#" class="brand-logo"><i class="material-icons">account_box</i>Cadastro de Usuario</a>
     </div>
   </nav>
+  <h1>
+ 		<a href="/menu" class="waves-effect waves-light btn">
+ 			<i class="material-icons">home</i>
+ 		</a>
+ 	</h1>
   
 	<form class="container" method="post">
 		<div class="row">
