--- a/armazemww/src/main/resources/templates/menu.html
+++ b/armazemww/src/main/resources/templates/menu.html
@@ -13,10 +13,12 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	
+      
+      <link rel="StyleSheet" href="style/styleCss.css" />
+      
 </head>
 <body>
-	
+	<!-- 
 	<nav>
 	    <div class="nav-wrapper">
 	      <a href="#" class="brand-logo center">Menu</a>
@@ -28,9 +30,47 @@
 	    </div>
 	</nav>
 	
+	<div class="collection">
+	    <a href="#!" class="collection-item"><span class="badge">1</span>Alan</a>
+	    <a href="#!" class="collection-item"><span class="new badge">4</span>Alan</a>
+	    <a href="#!" class="collection-item">Alan</a>
+	    <a href="#!" class="collection-item"><span class="badge">14</span>Alan</a>
+	  </div>
+	   -->
+	   
+	<div>
+		<div id="header">
+			<nav>
+			    <div class="nav-wrapper">
+			      <a href="#" class="brand-logo center">Armazem WW</a>
+			    </div>
+			  </nav>
+		</div>
+		<div id="left" bgcolor=#FFA07A>
+			<div class="collection">
+		        <a href="#!" class="collection-item">Administracao</a>
+		        <a href="/fornecedor" class="collection-item">Fornecedor</a>
+		        <a href="#!" class="collection-item">Fardo</a>
+		        <a href="/venda" class="collection-item">Vendas</a>
+		     </div>
+		</div>
+		<div id="content">
+			<div id="principal">
+			
+			</div>
+			<div id="featured">
+			
+			</div>
+		</div>
+		<div id="footer">
+			
+		</div>
+	</div>
+	
 	<!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+      
 	
 </body>
 
