--- a/armazemww/src/main/resources/templates/formFornecedor.html
+++ b/armazemww/src/main/resources/templates/formFornecedor.html
@@ -18,10 +18,19 @@
 <body>
 	
 	<nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><i class="material-icons">account_box</i>Fornecedor</a>
-    </div>
-  </nav>
+    	<div class="nav-wrapper">
+      		<a href="#" class="brand-logo"><i class="material-icons">account_box</i>Fornecedor</a>
+    	</div>
+ 	</nav>
+ 	<h1>
+ 		<a href="/menu" class="waves-effect waves-light btn">
+ 			<i class="material-icons">home</i>
+ 		</a>
+ 		<a href="/fornecedores" class="waves-effect waves-light btn">
+ 			<i class="material-icons">format_list_bulleted</i>
+ 			Lista de Fornecedores
+ 		</a>
+ 	</h1>
   
 	<form class="container" method="post">
 		<div class="row">
