--- a/armazemww/src/main/resources/templates/menu.html
+++ b/armazemww/src/main/resources/templates/menu.html
@@ -56,7 +56,7 @@
 		</div>
 		<div id="content">
 			<div id="principal">
-			
+                            <p>Informacao principal</p>
 			</div>
 			<div id="featured">
 			
